fixed who we are button alignment

--- a/pages/css/who-we-are.css
+++ b/pages/css/who-we-are.css
@@ -116,7 +116,7 @@
 }
 .serve__buttons{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     max-width: 800px;
     margin: 20px auto;
